// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navigation > renders the branding w/navigation 1`] = `
<h1
  style="--fs: 1.2rem;"
>
  <a
    href="/"
    style="text-transform: capitalize;"
  >
    Branding Logo
  </a>
</h1>
`;

exports[`Navigation > renders the branding w/navigation 2`] = `
<nav>
  <div>
    <h1
      style="--fs: 1.2rem;"
    >
      <a
        href="/"
        style="text-transform: capitalize;"
      >
        Branding Logo
      </a>
    </h1>
  </div>
  <ul>
    <li>
      <a
        href="/advanced"
        style="text-transform: capitalize;"
      >
        advanced
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Navigation > renders the navigation 1`] = `
<nav>
  <ul>
    <li>
      <a
        href="/advanced"
        style="text-transform: capitalize;"
      >
        advanced
      </a>
    </li>
  </ul>
</nav>
`;
